# neko8

./: .gitignore  .gitmodules  CMake Windows.bat  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  api.lua  cmake_install.cmake  conf.lua  config.lua  config.mk  error.lua  i686-mingw-w64.cmake  keyboard.lua  main.lua  minify.lua  neko.n8  neko8  neko8.cbp  neko8.love  run.sh  test  test.n8  test.txt
assets/: display.frag  draw.frag  sprite.frag  support.frag  text.frag
demos/: asm.n8  color_battle.n8  hello_asm.n8  procedural_dithering.n8  pset_asm.n8  rects.n8  streak.n8  triangles.n8
editors/: code.lua  docs.lua  init.lua  map.lua  music.lua  sfx.lua  sprites.lua  vi.lua
include/: api.hpp  carts.hpp  code.hpp  console.hpp  editors.hpp  fs.hpp  globals.hpp  graphics.hpp  helpers.hpp  neko.hpp  ram.hpp  sol.hpp
js/: conf.js  fengari.js  index.html  index.js  package.json  run.sh  styles.css  window.js
libs/: QueueableSource.lua  colorize.lua  gif.lua  log.lua  lulpeg.lua  lume.lua  lurker.lua  minify.lua
programs/: cd.n8  cls.n8  edit.n8  folder.n8  help.n8  install_demos.n8  load.n8  ls.n8  minify.n8  mkdir.n8  new.n8  pwd.n8  reboot.n8  rm.n8  run.n8  save.n8  shutdown.n8  tweet.n8  version.n8
releases/: neko8-0.0.4-dev.love  neko8-v0.0.4-web.love  neko8.love
src/: .api.lua.swp  api.cpp  api.hpp  api.lua  audio.lua  basicapi.lua  carts.cpp  carts.hpp  carts.lua  code.cpp  commands.lua  config.hpp  console.cpp  editors.cpp  fs.cpp  fs.hpp  gamepad.lua  globals.cpp  graphics.cpp  graphics.hpp  helpers.hpp  keyboard.lua  luaapi.cpp  main.cpp  neko.cpp  (+5 more)
(+86 files in other folders)
